# rtftree

./: LICENSE  README.md  RTFTree_README.md  exclude.txt  pyproject.toml
rtftree/: cli.py
